# geektime-rust

aicomm/: http.rest
aicomm/chat/: Cargo.toml
aicomm/chat/ai_sdk/: Cargo.toml
aicomm/chat/ai_sdk/examples/: cloudflare.rs  ollama.rs  openai.rs
aicomm/chat/ai_sdk/src/: lib.rs
aicomm/chat/ai_sdk/src/adapters/: cloudflare.rs  mod.rs  ollama.rs  openai.rs
aicomm/chat/analytics_server/: Cargo.toml  analytics.yml
aicomm/chat/analytics_server/src/: openapi.rs
aicomm/chat/bot_server/: bot.yml
aicomm/chat/bot_server/src/: notif.rs
aicomm/chat/chat_core/: Cargo.toml
aicomm/chat/chat_core/src/: lib.rs
aicomm/chat/chat_core/src/middlewares/: auth.rs  mod.rs
aicomm/chat/chat_core/src/utils/: jwt.rs  mod.rs
aicomm/chat/chat_server/: Cargo.toml
aicomm/chat/chat_server/fixtures/: test.sql
aicomm/chat/chat_server/src/: agent.rs  config.rs  error.rs  lib.rs  openapi.rs
aicomm/chat/chat_server/src/handlers/: agent.rs  chat.rs  messages.rs  mod.rs  workspace.rs
aicomm/chat/chat_server/src/middlewares/: chat.rs  mod.rs
aicomm/chat/chat_server/src/models/: agent.rs  chat.rs  message.rs  mod.rs  user.rs  workspace.rs
aicomm/chat/chat_test/: Cargo.toml
aicomm/chat/chat_test/tests/: chat.rs
aicomm/chat/migrations/: 20240602161202_initial.sql  20240929073721_agent.sql  20241023085354_agent_adapter.sql
aicomm/chat/notify_server/: Cargo.toml
aicomm/chat/notify_server/src/: lib.rs  notif.rs
aicomm/chat/simulator/: Cargo.toml
aicomm/chat/simulator/src/: convert.rs  dummy.rs
aicomm/chatapp/: package.json  tailwind.config.js
aicomm/e2e/: package-lock.json  package.json  playwright.config.ts
aicomm/protos/: messages.proto
aicomm/swiftide_pgvector/: Cargo.toml
chat/: .env  Cargo.toml  app.yml  chat.yml  http.rest  notify.yml
chat/chat_core/: Cargo.toml
chat/chat_core/src/: lib.rs
chat/chat_core/src/middlewares/: auth.rs  mod.rs  service_time.rs
chat/chat_core/src/utils/: jwt.rs
chat/chat_server/: Cargo.toml  chat.yml
chat/chat_server/fixtures/: decoding.pem  encoding.pem  test.sql
chat/chat_server/sql/: init.sql
chat/chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat/chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat/chat_server/src/middlewares/: auth.rs  mod.rs  request_id.rs
chat/chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat/chat_server/src/utils/: jwt.rs  mod.rs
chat/chat_test/: Cargo.toml  chat.yml  notify.yml
chat/chat_test/tests/: chat.rs
chat/migrations/: 20240602161202_initial.sql  20240613084250_workspace.sql  20240620023957_triggers.sql
chat/notify_server/: Cargo.toml  index.html  notify.yml
chat/notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
chatapp/: README.md  index.html  package-lock.json  package.json
chatapp/src/: main.js  utils.js
chatapp/src-tauri/: tauri.conf.json
clientapps/: Cargo.toml
clientapps/hackernews/: Cargo.toml  Dioxus.toml  (+4 more)
clientapps/src-tauri/: Cargo.toml  tauri.conf.json
clientapps/src-tauri/capabilities/: default.json
concurrency/: Cargo.toml  _typos.toml
crm/: Cargo.toml  Makefile  README.md  crm.yml  user_stat.yml
crm/crm/: Cargo.toml  build.rs  crm.yml
crm/crm-metadata/: Cargo.toml  build.rs
crm/crm-metadata/src/: config.rs  lib.rs  main.rs
crm/crm-metadata/src/abi/: mod.rs
crm/crm-metadata/tests/: service.rs
crm/crm/src/: client.rs  config.rs  lib.rs  server.rs
crm/crm/src/abi/: auth.rs  crm.rs  mod.rs
crm/crm/src/pb/: crm.rs
crm/fixtures/: cert.pem  key.pem  token
crm/protos/crm/: crm.proto  messages.proto  rpc.proto
crm/protos/metadata/: messages.proto
crm/protos/notification/: messages.proto  rpc.proto
crm/protos/user-stats/: messages.proto  rpc.proto
crm/send/: Cargo.toml  build.rs  send.yml
crm/send/src/: config.rs  lib.rs  main.rs
crm/send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm/send/src/pb/: mod.rs  notification.rs
crm/send/tests/: service.rs
crm/user-stat/: .env  Cargo.toml  build.rs  user_stat.yml
crm/user-stat/examples/: gen.rs
crm/user-stat/fixtures/: test.sql
crm/user-stat/migrations/: 20240627055836_init.sql  20240627092302_index.sql
crm/user-stat/src/: config.rs  lib.rs  main.rs
crm/user-stat/src/abi/: mod.rs
crm/user-stat/src/pb/: mod.rs  user_stats.rs
crm/user-stat/tests/: service.rs
dino/: Cargo.toml  test.rest
dino/bundler/: Cargo.toml
dino/bundler/fixtures/: lib.ts  main.ts
dino/bundler/src/: lib.rs
dino/bundler/src/bundle/: mod.rs  modules.rs  transpiler.rs
dino/dino/: Cargo.toml
dino/dino-macros/: Cargo.toml
dino/dino-macros/src/: lib.rs
dino/dino-server/: Cargo.toml
dino/dino-server/examples/: server.rs
dino/dino-server/fixtures/: config.yml  config1.yml
dino/dino-server/src/: config.rs  engine.rs  lib.rs  router.rs
dino/dino-server/src/middleware/: mod.rs  server_time.rs
dino/dino/src/: lib.rs  main.rs  utils.rs
dino/dino/src/cli/: build.rs  init.rs  mod.rs  run.rs
dino/dino/templates/: config.yml.j2  main.ts.j2
ecosystem/: Cargo.toml  README.md  http.rest
ecosystem/examples/: axum_serde.rs  axum_tracing.rs  builder.rs  bytes.rs  chat.rs  enum.rs  err.rs  minginx.rs  serde.rs  serde1.rs  shortener.rs  tokio2.rs
error-info/: Cargo.toml  README.md  http.rest
ffi/: Cargo.toml  README.md
finnal/: README.md
grammar/: Cargo.toml
grammar/examples/: json.pest  json.rs  json2.rs  nginx_log.rs  nginx_log2.rs
macros/: Cargo.toml  cliff.toml
macros/examples/: auto_deref.rs  enum_macro.rs  enum_macro_darling.rs  my_ready.rs  my_try.rs  my_vec.rs
macros/src/: auto_debug.rs  auto_deref.rs  enum_from.rs  enum_from_darling.rs  lib.rs
rcli/: Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  test.http
rcli/fixtures/: blake3.txt
rcli/src/: lib.rs  main.rs  utils.rs
rcli/src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  jwt.rs  mod.rs  text.rs
rcli/src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
simple-redis/: Cargo.toml  README.md
taotie/: .gitignore  Cargo.toml
(+99 files in other folders)
