[workspace]
members = ["crm", "crm-metadata", "send", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
prost = "0.12.6"
prost-types = "0.12.6"
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
serde = "1.0.203"
rand = "0.8.5"
futures = "0.3.30"
serde_yaml = "0.9.34"
itertools = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
fake = { version = "2.9.2", features = ["derive", "chrono"] }
tokio-stream = { version = "0.1.15" }
uuid = { version = "1.9.1", features = ["v4", "serde"] }

proto-builder-trait = "0.6.1"
tonic-build = "0.11.0"
prost-build = "0.12.6"
derive_builder = "0.20.0"

user-stat = { path = "user-stat" }
crm-metadata = { path = "crm-metadata" }
send = { path = "send" }