[package]
name = "echosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1.0.83"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs", "io-util"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
tracing-opentelemetry = "0.23.0"
