[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
anyhow = "1.0.83"
features = { version = "0.10.0", default-features = false }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs", "io-util"] }

[dependencies]
darling = "0.20.8"
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = { version = "2.0.63", features = ["extra-traits"] }
