[package]
name = "rcli"
version = "0.1.0"
authors = ["cxn <xiaonanchen1989@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
toml = "0.8.12"
rand = "0.8.5"
zxcvbn = "2.2.2"
blake3 = "1.5.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
chacha20poly1305 = { version = "0.10.1", features = ["rand_core"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tower-http = { version = "0.5.2", features = ["compression-full", "cors", "trace", "fs"] }
futures = "0.3.30"
tower-service = "0.3.2"
enum_dispatch = "0.3.13"
jsonwebtoken = "9.3.0"
humantime = "2.1.0"
base64 = "0.21.7"
