[workspace]
members = ["ai_sdk", "analytics_server", "bot_server", "chat_core", "chat_server", "chat_test", "notify_server"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["http2", "query", "tracing", "multipart", "macros"] }
axum-macros = "0.4.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs", "io-util"] }
dashmap = "6.1.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.26.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.128"
chat-core = { path = "./chat_core" }
chat-server = { path = "./chat_server" }
notify-server = { path = "./notify_server" }
ai-sdk = { path = "./ai_sdk" }
bot-server = { path = "./bot_server" }
swiftide-pgvector = { path = "../swiftide_pgvector" }
analytics-server = { path = "./analytics_server" }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["compression-full", "cors", "trace", "fs"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
jwt-simple = "0.12.10"
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
uuid = { version = "1.10.0", features = ["v7", "serde"] }
reqwest = { version = "0.12.8", default-features = false, features = [
    "rustls-tls",
    "json",
    "multipart",
    "stream",
] }