[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
jwt-simple = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
tracing = { workspace = true }
utoipa.workspace = true
