[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-macros = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
jwt-simple = "0.12.9"
serde_json = "1.0.117"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-full", "trace", "fs"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
hex = "0.4.3"
sha1 = "0.10.6"
mime_guess = "2.0.4"

[dev-dependencies]
sqlx-db-tester = "0.4.2"
http-body-util = "0.1.1"
