[package]
name = "chat-test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow.workspace = true
axum = { workspace = true }
chat-core = { workspace = true }
chat-server = { workspace = true, features = ["test-util"] }
futures = "0.3.30"
notify-server = { workspace = true }
reqwest = { version = "0.12.5", features = ["rustls-tls", "json", "multipart", "stream"] }
reqwest-eventsource = "0.6.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
