[package]
name = "send"
version = "0.1.0"
edition = "2021"

[features]
default = []
test_utils = ["fake", "nanoid", "uuid"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
sqlx = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
derive_builder.workspace = true
futures = { workspace = true }
serde_yaml = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }
fake = { version = "2.9.2", features = ["derive", "chrono"], optional = true }
nanoid = { version = "0.4.0", optional = true }
uuid = { version = "1.9.1", features = ["v4", "serde"], optional = true }


[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = { workspace = true }

[dev-dependencies]
send = { workspace = true, features = ["test_utils"] }