[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3.30"
tokio-stream = { version = "0.1.16", features = ["sync"] }
axum-macros = { workspace = true }
chat-core = { workspace = true }
jwt-simple = { workspace = true }
dashmap = "6.1.0"
serde_json = { workspace = true }
log = "0.4.22"
async-stream = "0.3.5"
tower-http.workspace = true
